image overflow fix

--- a/src/components/home/HomeStyles.css
+++ b/src/components/home/HomeStyles.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    position: relative;
 }
 
 
@@ -292,10 +293,11 @@
     color: #FE407E;
 }
 
+
 .home .image img {
     height: auto;
     width: 600px;
-    position: fixed;
+    position: absolute;
     bottom: 0%;
     left: 50%;
     transform: translate(-50%, 45%);
